// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex interceptor should call method-level interceptor correctly (GET) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Complex interceptor should call method-level interceptor correctly (GET) 2`] = `"ab"`;

exports[`ExpressConverter errors Bad interceptor 1`] = `[BadInterceptorError: A must implement Interceptor interface]`;

exports[`ExpressConverter errors Interceptor throw exception 1`] = `true`;

exports[`ExpressConverter errors Interceptor throw exception 2`] = `true`;

exports[`Interceptors: should call all middleware in correct order 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should call all middleware in correct order 2`] = `"abc"`;

exports[`Interceptors: should call controller-level middleware correctly 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should call controller-level middleware correctly 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (ALL) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "ALL",
}
`;

exports[`Interceptors: should call method-level middleware correctly (ALL) 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (DELETE) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "6",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "DELETE",
  },
  "status": 200,
  "text": "DELETE",
}
`;

exports[`Interceptors: should call method-level middleware correctly (DELETE) 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (GET) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should call method-level middleware correctly (GET) 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (HEAD) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "HEAD",
  },
  "status": 200,
  "text": undefined,
}
`;

exports[`Interceptors: should call method-level middleware correctly (HEAD) 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (PATCH) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PATCH",
  },
  "status": 200,
  "text": "PATCH",
}
`;

exports[`Interceptors: should call method-level middleware correctly (PATCH) 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (POST) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "POST",
  },
  "status": 200,
  "text": "POST",
}
`;

exports[`Interceptors: should call method-level middleware correctly (POST) 2`] = `"abc"`;

exports[`Interceptors: should call method-level middleware correctly (PUT) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PUT",
  },
  "status": 200,
  "text": "PUT",
}
`;

exports[`Interceptors: should call method-level middleware correctly (PUT) 2`] = `"abc"`;

exports[`Interceptors: should call server-level middleware correctly 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should call server-level middleware correctly 2`] = `"abc"`;

exports[`Interceptors: should compose controller- and method-level middleware 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should compose controller- and method-level middleware 2`] = `"ab"`;

exports[`Interceptors: should resolve controller-level middleware 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should resolve controller-level middleware 2`] = `"ab"`;

exports[`Interceptors: should resolve method-level middleware 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Interceptors: should resolve method-level middleware 2`] = `"ab"`;

exports[`Middleware inject: should call all middleware in correct order 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware inject: should call all middleware in correct order 2`] = `"abcd"`;

exports[`Middleware inject: should call all middleware in correct order 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call controller-level middleware correctly 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware inject: should call controller-level middleware correctly 2`] = `"abcd"`;

exports[`Middleware inject: should call controller-level middleware correctly 3`] = `""`;

exports[`Middleware inject: should call method-level middleware correctly (ALL) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "ALL",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (ALL) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (ALL) 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (DELETE) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "6",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "DELETE",
  },
  "status": 200,
  "text": "DELETE",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (DELETE) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (DELETE) 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (GET) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (GET) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (GET) 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (HEAD) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "HEAD",
  },
  "status": 200,
  "text": undefined,
}
`;

exports[`Middleware inject: should call method-level middleware correctly (HEAD) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (HEAD) 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (PATCH) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PATCH",
  },
  "status": 200,
  "text": "PATCH",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (PATCH) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (PATCH) 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (POST) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "POST",
  },
  "status": 200,
  "text": "POST",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (POST) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (POST) 3`] = `"cargdeargdearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (PUT) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PUT",
  },
  "status": 200,
  "text": "PUT",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (PUT) 2`] = `"abcd"`;

exports[`Middleware inject: should call method-level middleware correctly (PUT) 3`] = `"cargdeargdearg2"`;

exports[`ToInterceptor express middleware with next function with errors 1`] = `"midError"`;

exports[`ToInterceptor express middleware with next function without errors 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`ToInterceptor express middleware with next function without errors 2`] = `"mid"`;

exports[`ToInterceptor express middleware without next function with errors 1`] = `"midError"`;

exports[`ToInterceptor express middleware without next function without errors 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`ToInterceptor express middleware without next function without errors 2`] = `"mid"`;
